--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <vertx.version>4.4.0</vertx.version>
     <junit-jupiter.version>5.9.1</junit-jupiter.version>
 
-    <main.verticle>com.jee4j.MainVerticle</main.verticle>
+    <main.verticle>com.jee4j.verticle.MainVerticle</main.verticle>
     <launcher.class>io.vertx.core.Launcher</launcher.class>
   </properties>
 
